# ExoEngine-experimental

./: .gitignore  CMakeLists.txt  README.md  gen_vs2019_x64.bat
examples/: CMakeLists.txt
examples/audio/: CMakeLists.txt  main.cpp
examples/audio/resources/: resources.xml  settings.xml
examples/editor/: CMakeLists.txt
examples/editor/resources/: resources.xml  settings.xml
examples/editor/src/: main.cpp
examples/editor/src/ImGui/: imgui.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_widgets.cpp
examples/window/: CMakeLists.txt  main.cpp
examples/window/resources/: resources.xml
examples/window/resources/UI/fonts/fontawesome/: fontawesome.fnt
examples/window/resources/UI/fonts/raleway/: Raleway.fnt
examples/window/resources/shaders/OpenGL3/: 2D.glsl  font.glsl  gui.glsl  map.glsl  shadow.glsl
examples/window/resources/shaders/OpenGL3/post-processing/: default.glsl
include/: Alarm.h  AlarmQueue.h  ArrayTexture.h  Axis.h  Buffer.h  Camera.h  CircularBuffer.h  Dynamic.h  Engine.h  Enums.h  FrameBuffer.h  GUIRenderer.h  Gamepad.h  GamepadManager.h  Grid.h  Hitbox.h  IArrayTexture.h  IAudio.h  IAxis.h  ICamera.h  IFrameBuffer.h  IGamepad.h  IGamepadManager.h  IKeyboard.h  IMouse.h  IMusic.h  IRenderer.h  IResource.h  IShader.h  ISound.h  ISource.h  ITexture.h  IWindow.h  Keyboard.h  LibLoader.h  Local.h  Log.h  Message.h  Mouse.h  MousePicker.h  (+31 more)
include/Audio/: Audio.h  Music.h  OALSound.h  OALSource.h  OggLoader.h  Sound.h  Source.h
include/UI/: Button.h  Checkbox.h  Cursor.h  FntLoader.h  Font.h  IButton.h  ICheckbox.h  ICursor.h  IImage.h  IInput.h  ILabel.h  ISelect.h  ISlider.h  ISpinner.h  IView.h  IWidget.h  Image.h  Input.h  Label.h  Navigator.h  Select.h  Slider.h  Spinner.h  View.h  anchorPoint.h  textAlignment.h
lib-Exo-Audio/OpenAL/include/: OALAudio.h  OALMusic.h  OALSound.h  OALSource.h
lib-Exo-Audio/OpenAL/src/: OALMusic.cpp
lib-Exo-Audio/audio/include/: OggLoader.h
lib-Exo-Audio/audio/src/: OggLoader.cpp
lib-Exo-Renderer/SDLOpenGL/: CMakeLists.txt
lib-Exo-Renderer/SDLOpenGL/include/: OGLException.h  RendererSDLOpenGL.h
lib-Exo-Renderer/SDLOpenGL/src/: RendererSDLOpenGL.cpp  Window.cpp
lib-Exo-Renderer/renderer/include/: Enums.h  IRenderer.h  sprite.h
src/: Alarm.cpp  AlarmQueue.cpp  ArrayTexture.cpp  Axis.cpp  Buffer.cpp  Camera.cpp  Dynamic.cpp  Engine.cpp  FrameBuffer.cpp  GUIRenderer.cpp  Gamepad.cpp  GamepadManager.cpp  Grid.cpp  Hitbox.cpp  IAudio.cpp  IMusic.cpp  ISound.cpp  ISource.cpp  Keyboard.cpp  Local.cpp  Log.cpp  Message.cpp  Mouse.cpp  OALAudio.cpp  OALMusic.cpp  OALSound.cpp  OALSource.cpp  OGLException.cpp  Object.cpp  ObjectRenderer.cpp  OggLoader.cpp  Page.cpp  PhysicManager.cpp  Reflectable.cpp  RendererSDLOpenGL.cpp  ResourceManager.cpp  Runner.cpp  SDLException.cpp  Scene.cpp  SceneStateMachine.cpp  (+9 more)
src/Audio/: Audio.cpp  Music.cpp  OALAudio.cpp  OALMusic.cpp  OALSound.cpp  OALSource.cpp  OggLoader.cpp  Sound.cpp  Source.cpp
src/UI/: Button.cpp  Checkbox.cpp  Cursor.cpp  IWidget.cpp  Image.cpp  Input.cpp  Label.cpp  Select.cpp  Slider.cpp  Spinner.cpp  View.cpp
src/Utils/: Utils.cpp
